lab1/Test/L1-A-13-84.output
Error Type B at Line 2
Error Type B at Line 10
Error Type B at Line 17
Error Type B at Line 22
Error Type A at Line 30
Error Type B at Line 41
